Fix exlipse warnings in cesecore-common test code