@@ -18,6 +18,7 @@
  */
 package org.cesecore.keys.validation;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
@@ -33,7 +34,7 @@ public final class ValidatorTestUtil {
     /**
      * Factory method to create key validators.
      * 
-     * @param type the key validator type (see {@link ValidatorBase#KEY_VALIDATOR_TYPE}
+     * @param type the key validator type (see {@link ValidatorBase#TYPE}
      * @param name the logical name
      * @param description the description text
      * @param notBefore the certificates validity not before
@@ -43,13 +44,17 @@ public final class ValidatorTestUtil {
      * @param failedAction the failed action to be performed.
      * @param certificateProfileIds list of IDs of certificate profile to be applied to. 
      * @return the concrete key validator instance.
-     * @throws IllegalAccessException 
-     * @throws InstantiationException 
+     * @throws IllegalAccessException fail
+     * @throws InstantiationException fail
+     * @throws SecurityException fail
+     * @throws NoSuchMethodException fail
+     * @throws InvocationTargetException fail
+     * @throws IllegalArgumentException fail
      */
     public static final KeyValidator createKeyValidator(Class<? extends KeyValidator> type, final String name, final String description, final Date notBefore,
             final int notBeforeCondition, final Date notAfter, final int notAfterCondition, final int failedAction,
-            final Integer... certificateProfileIds) throws InstantiationException, IllegalAccessException {
-        KeyValidator result = type.newInstance();
+            final Integer... certificateProfileIds) throws InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
+        KeyValidator result = type.getConstructor().newInstance();
         result.setProfileName(name);
         if (null != description) {
             result.setDescription(description);
